--- a/predict-frontend/src/App.css
+++ b/predict-frontend/src/App.css
@@ -1,6 +1,9 @@
+@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap');
+
 .App {
   text-align: center;
   overflow-x: hidden;
+  font-family: 'Roboto', sans-serif;
 }
 
 .App-header {
@@ -137,6 +140,8 @@ button:hover {
   height: 100vh;
   background: rgb(238, 174, 202);
   background: radial-gradient(circle, rgba(238, 174, 202, 1) 0%, rgba(148, 187, 233, 1) 100%);
+  display: flex;
+  flex-direction: column;
 }
 
 .intro h1 {
@@ -153,6 +158,16 @@ button:hover {
   margin: 0;
   padding: 80px;
   text-align: center;
+}
+
+.intro p,
+.intro p a {
+  padding: 10px;
+}
+
+.intro p a {
+  color: #770544;
+  font-weight: bold;
 }
 
 @media (max-width: 640px) {
