--- a/predict-frontend/src/App.css
+++ b/predict-frontend/src/App.css
@@ -244,3 +244,20 @@ button:hover {
     width: 80%;
   }
 }
+
+.cursor {
+  animation: blink 1s step-start 0s infinite;
+}
+
+@keyframes blink {
+
+  0%,
+  50% {
+    opacity: 1;
+  }
+
+  50.01%,
+  100% {
+    opacity: 0;
+  }
+}
