--- a/natural/myapp/src/App.css
+++ b/natural/myapp/src/App.css
@@ -105,7 +105,7 @@ header {
   padding: 10px 20px;
   border: none;
   border-radius: 4px;
-  background-color: aquamarine;
+  background-color: rgb(183, 189, 187);
   color: white;
   cursor: pointer;
   font-weight: bold;
