--- a/natural/myapp/src/App.css
+++ b/natural/myapp/src/App.css
@@ -13,11 +13,15 @@ header {
   padding: 10px 0;
   background-color: rgb(44, 27, 35);
   display: flex;
-  justify-content: space-between;
+  justify-content: flex-end;
   align-items: center;
   position: fixed;
   top: 0;
   z-index: 10;
+}
+
+.App-header {
+  padding-left: 20px;
 }
 
 .Design-link {
@@ -37,6 +41,7 @@ header {
   margin-left: 10px;
   font-size: 1.5rem;
   color: white;
+  margin-right: auto;
 }
 
 .App {
@@ -198,7 +203,7 @@ header {
   }
 }
 
-@media (max-width: 375x) {
+@media (max-width: 375px) {
 
   .Input-area {
     padding: 10px;
